--- a/web/themes/custom/groco/css/products/productviews.css
+++ b/web/themes/custom/groco/css/products/productviews.css
@@ -88,3 +88,15 @@
     line-height: 3rem;
 }
 
+.node--type-products .header-product .field--name-field-img-product{
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.node--type-products .header-product .field--name-field-img-product img{
+    height:29rem;
+    width: 30rem;
+    object-fit: cover;
+}
