--- a/web/themes/custom/groco/css/products/product-slide.css
+++ b/web/themes/custom/groco/css/products/product-slide.css
@@ -80,6 +80,7 @@
 .view-id-product_slide .slick-list .slick-slide .views-row .views-field-field-nam a{
     color: var(--black);
     font-size: 2.2rem;
+    font-weight: bold;
  
 }
 .view-id-product_slide .slick-list .slick-slide .views-row .views-field-field-img-product img{
