--- a/web/themes/custom/groco/css/menu.css
+++ b/web/themes/custom/groco/css/menu.css
@@ -11,7 +11,7 @@
     /* max-width: 2400px; */
     /* align-items: flex-start; */
     /* justify-self: ; */
-
+    box-shadow: 0 .5rem 1.5rem rgba(0,0,0,.1);
 }
 
 .menu--main .menu{
