add style and template

--- a/web/themes/custom/groco/template/node--shop.html.twig
+++ b/web/themes/custom/groco/template/node--shop.html.twig
@@ -126,6 +126,11 @@
         </div>
         <div class="box">
           <span class="icons"><i class="fas fa-play"></i></span>
+          <p class="title-shop">Verify</p>
+        </div>
+          {{ content.field_img_verify }}
+        <div class="box">
+          <span class="icons"><i class="fas fa-play"></i></span>
           <p class="title-shop">Location</p>
         </div>
           {{ content.field_map_shop }}
