--- a/web/themes/custom/groco/css/shops/shopview.css
+++ b/web/themes/custom/groco/css/shops/shopview.css
@@ -80,8 +80,8 @@
 
 
 .node--type-shop .field--name-field-img-shop img{
-    height: 40rem;
-    width: 40rem;
+    height: 100%;
+    width: 100%;
     object-fit: cover;
 }
 
@@ -94,4 +94,25 @@
 }
 
 .node--type-shop .field--name-field-map-shop{margin: 2rem 2%;}
+
+
+.node--type-shop .field--name-field-img-verify{
+    margin: 2rem 2%;
+    display: flex;
+}
+
+.node--type-shop .field--name-field-img-verify .field__item{
+    max-width: 30%;
+    flex:0 0 30%;
+    margin-right: 2%;
+}
+
+.node--type-shop .field--name-field-img-verify .field__item img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+
 
