--- a/web/themes/custom/groco/template/node--blogs.html.twig
+++ b/web/themes/custom/groco/template/node--blogs.html.twig
@@ -97,7 +97,7 @@
       
     </footer>
   {% endif %}
-  <div class="region region-content" style="marign:0 auto; max-witdh:1900px"></div>
+  <div class="region region-content" style="marign:0 auto; margin-top:9rem; max-witdh:1900px"></div>
   <div{{ content_attributes.addClass('node__content') }}>
     
     {{ content.field_title_blogs }}
