--- a/web/themes/custom/groco/css/language.css
+++ b/web/themes/custom/groco/css/language.css
@@ -39,7 +39,7 @@
     width: 9rem;
     height: 5rem;
     right:30%;
-    top:100%;
+    top:4.8rem;
     display: none; 
     position: absolute;
     z-index: 1;
