--- a/web/themes/custom/groco/css/products/productviews.css
+++ b/web/themes/custom/groco/css/products/productviews.css
@@ -89,14 +89,14 @@
 }
 
 .node--type-products .header-product .field--name-field-img-product{
-    width: 50%;
+    max-width: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .node--type-products .header-product .field--name-field-img-product img{
-    height:29rem;
-    width: 30rem;
+    height:100%;
+    width: 100%;
     object-fit: cover;
 }
