--- a/web/themes/custom/groco/css/products/productviews.css
+++ b/web/themes/custom/groco/css/products/productviews.css
@@ -57,7 +57,7 @@
     border-radius: .5rem;
     box-shadow: var(--box-shadow);
     margin-right: 2%;
-    
+    height: 100%;
 }
 
 .node--type-products .header-product .field--name-field-nam{
@@ -80,12 +80,20 @@
     margin: 1.3rem 1rem;
     color: #666;
 }
-
-.node--type-products .header-product .field--name-field-info-product{
+.node--type-products .header-product .field--name-field-info-product {
     color: #666;
     font-size: 1.3rem;
     margin: 1.3rem 1rem;
     line-height: 3rem;
+}
+
+
+.node--type-products .header-product .field--name-field-info p {
+    color: #666;
+    font-size: 1.3rem;
+    margin: 1.3rem 1rem;
+    line-height: 3rem;
+    font-weight: revert;
 }
 
 .node--type-products .header-product .field--name-field-img-product{
@@ -96,7 +104,7 @@
 }
 
 .node--type-products .header-product .field--name-field-img-product img{
-    height:100%;
+    /* height:100%; */
     width: 100%;
     object-fit: cover;
 }
