--- a/web/themes/custom/groco/template/node--products.html.twig
+++ b/web/themes/custom/groco/template/node--products.html.twig
@@ -111,6 +111,7 @@
           {{ content.field_price_product }}
           <p>Information Product: </p>
           {{ content.field_info_product }}
+          {{ content.field_info }}
           </div>
       </div>
       <div class="form-contact">
@@ -118,6 +119,21 @@
       </div>
     <div class="clearfix"></div>
 
+  </div>
+  {%
+  set classes2 = [
+    'view',
+    'view-' ~ 'views-exposed-form-search-product-page-1'|clean_class,
+    'view-id-' ~ 'views-exposed-form-search-product-page-1',
+    'view-display-id-' ~ display_id,
+    '2241c7c1a1a0fc63d366884272fa2934765f098377098b87ef8a3fbff8289b3a' ? 'js-view-dom-id-' ~ '2241c7c1a1a0fc63d366884272fa2934765f098377098b87ef8a3fbff8289b3a',
+  ]
+  %}
+  <div{{ attributes.addClass(classes2) }}>
+  {{ title_prefix }}
+  {% if title %}
+    {{ title }}
+  {% endif %}
   </div>
 
 </article>
